[gd_scene load_steps=3 format=2]

[ext_resource path="res://menu/LevelSelectButton.gd" type="Script" id=1]
[ext_resource path="res://menu/assets/levelSelectButton.png" type="Texture" id=2]

[node name="LevelSelectButton" type="Control"]
anchor_right = 0.065
anchor_bottom = 0.111
margin_top = -0.513351
margin_right = 957.44
margin_bottom = 532.887
script = ExtResource( 1 )

[node name="TextureRect" type="TextureButton" parent="."]
margin_right = 264.772
margin_bottom = 266.0
rect_scale = Vector2( 0.25, 0.25 )
texture_normal = ExtResource( 2 )

[node name="level_number" type="Label" parent="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -200.0
margin_bottom = -200.0
rect_scale = Vector2( 4, 4 )
text = "1"
align = 1
valign = 1
[connection signal="pressed" from="TextureRect" to="." method="_on_TextureRect_pressed"]
